# codeanimator

./: .gitignore  CMakeLists.txt  ColoredPolygon.cpp  ColoredPolygon.h  SelectionTool.cpp  SelectionTool.h  animation.cpp  animation.cpp.autosave  animation.h  animeditor.cpp  animeditor.pro  binding.cpp  binding.h  bindspline.cpp  extmath.cpp  extmath.h  main.cpp  mainwindow.cpp  mainwindow.h  qconsolewidget.cpp  qconsolewidget.h  redirect.cpp  resources.qrc  splineeditor.cpp  splineeditor.h  types.h  viewer.cpp  viewer.h
anim/: boneanimated.cpp  boneanimated.h  boneposition.cpp  boneposition.h  spine.h  spline.cpp  spline.h
ogl/: fpoint.cpp  fpoint.h  matrix.h  rect.cpp  rect.h  render.cpp  render.h  sprite.cpp  sprite.h  textures.cpp  textures.h  vertexbuffer.cpp  vertexbuffer.h
rapidxml/: rapidxml_utils.hpp
sources/: ColoredPolygon.cpp  ColoredPolygon.h  SelectionTool.cpp  SelectionTool.h  animation.cpp  animation.h  animeditor.cpp  bindspline.cpp  bindspline.h  extmath.cpp  extmath.h  main.cpp  mainwindow.cpp  mainwindow.h  qconsolewidget.cpp  qconsolewidget.h  splineeditor.cpp  splineeditor.h  types.h  viewer.cpp  viewer.h
sources/anim/: boneanimated.cpp  boneanimated.h  spline.cpp  spline.h
sources/ogl/: fpoint.cpp  fpoint.h  matrix.h  rect.cpp  rect.h  render.cpp  render.h  sprite.cpp  sprite.h  textures.cpp  textures.h  vertexbuffer.cpp  vertexbuffer.h
sources/rapidxml/: rapidxml_utils.hpp
